--- a/html/maquette/intra/css/sidebar.css
+++ b/html/maquette/intra/css/sidebar.css
@@ -2,19 +2,38 @@
         display:block;
         height: 100%;
         position: fixed;
-        z-index: 9;
-        background-color:#70645c;
-        color: #2c2c34;
-
-        padding-top: 1em;
+        top: 0;
+        padding-top:8vh;
+        background-color:#F5F5F5;
+        box-shadow: 0.5vh 1vh 0.5vh 0.5vh rgba(0, 0, 0, 0.5);
         transition: 0.25s;
         overflow-x: hidden;
 }
 
-.sidebar-item {
-	color:#ffffff;
-	font-size: 1.2em;
-	text-align:center;
-	margin-top:1em;
+.sidebar-section {
+        color: #000000;
+        margin-bottom:2vh;
+        margin-left:0.5vw;
+        margin-right:0.5vw;
+        font-size: 2.0vh;
+        border-style: solid;
+        border-radius: 0.5em;
+        border-width: 0.1em;
 }
+
+.sidebar-section-title {
+        margin-left:0.5vw;
+        margin-right:1vw;
+        font-weight: bold;
+        text-transform: uppercase;
+}
+
+.sidebar-section-item {
+        font-size:1.8vh;
+        margin-left:1vw;
+        margin-right:1vw;
+        margin-bottom:0.2vh;
+}
+
+
 
