--- a/html/maquette/intra/css/navbar.css
+++ b/html/maquette/intra/css/navbar.css
@@ -1,10 +1,45 @@
 .navbar {
+	display:inline-block;
+	width:100%;
+	height:6rem;
 	background-color: #FFFFFF;
 	font-weight: bold;
 	color: #000000;
-    box-shadow: 0 0 1vh 0.5vh rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0 1vh 0.5vh rgba(0, 0, 0, 0.5);
 }
 
+.navbar-search-form {
+
+}
+
+.navbar-item {
+	float:left;
+	margin:auto;
+}
+
+.navbar-toggler {
+	font-size:2rem;
+}
+
+.navbar-title {
+	font-size:2rem;
+}
+
+.navbar-profile {
+	float:right;
+}
+
+.navbar-profile-login {
+	font-size:1rem;
+}
+
+.navbar-profile-img {
+	height: 4rem;
+	border-color: #000000;
+	border-width:0.1rem;
+	border-style:solid;
+	border-radius:2rem;
+}
 .navbar img {
-	height: 100%;
+	padding-top:0;
 }
