--- a/html/maquette/intra/css/navbar.css
+++ b/html/maquette/intra/css/navbar.css
@@ -1,20 +1,31 @@
 .navbar {
-	display:inline-block;
-	width:100%;
-	height:6rem;
+	display: flex;
+	flex-direction: row;
+	/*justify-content: center;*/
+
+	width: 100%;
+	height: 5rem;
+	min-width:62rem;
+
 	background-color: #FFFFFF;
 	font-weight: bold;
 	color: #000000;
 	box-shadow: 0 0 1vh 0.5vh rgba(0, 0, 0, 0.5);
 }
 
-.navbar-search-form {
+.navbar img {
+	height: 100%;
+	border-color: #000000;
+	border-width:0.1rem;
+	border-style:solid;
+}
 
+.navbar i {
 }
 
 .navbar-item {
-	float:left;
-	margin:auto;
+    text-align: center;
+    margin-left:4rem;
 }
 
 .navbar-toggler {
@@ -23,23 +34,31 @@
 
 .navbar-title {
 	font-size:2rem;
+	margin-right:0.5rem;
+}
+
+.navbar-title.icon {
+
+}
+
+.navbar-title-text {
+	margin-left:0.5rem;
+}
+
+.navbar-search-form {
+
 }
 
 .navbar-profile {
 	float:right;
+	height: 100%;
 }
 
 .navbar-profile-login {
 	font-size:1rem;
+	margin-right:0.5rem;
 }
 
 .navbar-profile-img {
-	height: 4rem;
-	border-color: #000000;
-	border-width:0.1rem;
-	border-style:solid;
-	border-radius:2rem;
-}
-.navbar img {
-	padding-top:0;
+
 }
