--- a/html/maquette/intra/css/page.css
+++ b/html/maquette/intra/css/page.css
@@ -6,18 +6,67 @@
 .page-content {
 }
 
-.page-content-news {
+.page-content-item {
+        min-width:40rem;
+
         background-color:rgba(255, 255, 255, 0.7);
-        border-style: solid;
-        border-width: 0.1rem;
 
         margin-left:8rem;
-        margin-right:16rem;
+        margin-right:8rem;
         margin-top:2rem;
-        margin-bottom:8rem;
+        margin-bottom:2rem;
 }
 
-.page-content-news-title {
+.b {
+        border-style: solid;
+        border-width: 0.1rem;
+}
+
+.b-l {
+        border-left:solid black 0.1rem;
+}
+
+.b-r {
+        border-right:solid black 0.1rem;
+}
+
+.b-t {
+        border-top:solid black 0.1rem;
+}
+
+.b-b {
+        border-bottom:solid black 0.1rem;
+}
+
+
+.page-content-item-banner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+}
+
+.page-content-item-banner-item {
+        flex-grow: 1;
+        text-align: center;
+}
+
+.page-content-item-banner-item-title {
+        width:100%;
+        padding-top:0.5rem;
+        padding-bottom:0.5rem;
+        background-color:rgba(114, 145, 50, 0.6);
+}
+
+.page-content-item-banner-item-content {
+        padding-top:0.5rem;
+        padding-bottom:0.5rem;
+}
+
+.page-content-item-news {
+
+}
+
+.page-content-item-news-title {
         background-color:rgba(114, 145, 50, 0.6);
         font-size: 1.5rem;
         padding-top: 0.5rem;
@@ -26,7 +75,7 @@
         padding-right: 0.5rem;
 }
 
-.page-content-news-content {
+.page-content-item-news-text {
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
         padding-left: 1rem;
