--- a/html/maquette/intra/css/page.css
+++ b/html/maquette/intra/css/page.css
@@ -48,18 +48,51 @@
 .page-content-item-banner-item {
         flex-grow: 1;
         text-align: center;
+        max-width:33%;
+        min-height: 100%;
 }
 
-.page-content-item-banner-item-title {
+.page-content-item-banner-item-survey {
+
+}
+
+.page-content-item-banner-item-survey-title {
         width:100%;
+        font-size: 1.4rem;
         padding-top:0.5rem;
         padding-bottom:0.5rem;
-        background-color:rgba(114, 145, 50, 0.6);
+        text-decoration: underline;
+
 }
 
-.page-content-item-banner-item-content {
-        padding-top:0.5rem;
+.page-content-item-banner-item-survey-question {
+        width:100%;
+        font-weight:bold;
         padding-bottom:0.5rem;
+}
+
+.page-content-item-banner-item-survey-answers {
+        width:100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-bottom:0.5rem;
+        padding-top:0.5rem;
+}
+
+.page-content-item-banner-item-survey-answer:hover {
+        transform:scale(1.5) rotate(1turn);
+        font-weight: bold;
+}
+
+.page-content-item-banner-item-survey-answer {
+        margin:0rem 0.5rem 0.5rem 0.5rem;
+        flex-grow: 1;
+        width:cover;
+        height: cover;
+        text-align: center;
+        cursor:pointer;
+        transition: all 0.2s ease-in-out;
 }
 
 .page-content-item-news {
@@ -83,13 +116,12 @@
 }
 
 .page-sidebar {
-        min-width: 14rem;
         width: cover;
         height: cover;
         background-color:#F5F5F5;
         box-shadow: 0.5vh 1vh 0.5vh 0.5vh rgba(0, 0, 0, 0.5);
-        transition: 0.25s;
-        overflow-x: hidden;
+        white-space:nowrap;
+        transition: all 0.5s ease-in-out;
 }
 
 .page-sidebar-section {
