--- a/html/maquette/intra/css/navbar.css
+++ b/html/maquette/intra/css/navbar.css
@@ -1,27 +1,20 @@
 .navbar {
-	display: flex;
-	flex-direction: row;
-	/*justify-content: center;*/
-
-	width: 100%;
-	height: 5rem;
-	min-width:62rem;
-
+	display:inline-block;
+	width:100%;
+	height:6rem;
 	background-color: #FFFFFF;
 	font-weight: bold;
 	color: #000000;
 	box-shadow: 0 0 1vh 0.5vh rgba(0, 0, 0, 0.5);
 }
 
-.navbar img {
-	height: 100%;
-}
+.navbar-search-form {
 
-.navbar i {
 }
 
 .navbar-item {
-    text-align: center;
+	float:left;
+	margin:auto;
 }
 
 .navbar-toggler {
@@ -29,40 +22,24 @@
 }
 
 .navbar-title {
-	font-size:2.0rem;
-	margin-left:1rem;
-	margin-right:0rem;
-	margin-top:auto;
-	cursor:pointer;
-	align-self: flex-start;
-}
-
-.navbar-title-icon {
-
-}
-
-.navbar-title-text {
-	margin-left:0.5rem;
-}
-
-.navbar-item-logo {
-	margin:auto;
-}
-
-.navbar-search-form {
-	margin-left:auto;
+	font-size:2rem;
 }
 
 .navbar-profile {
-	height: 100%;
+	float:right;
 }
 
 .navbar-profile-login {
 	font-size:1rem;
-	margin-right:1rem;
-	margin-left:1rem;
 }
 
 .navbar-profile-img {
-
+	height: 4rem;
+	border-color: #000000;
+	border-width:0.1rem;
+	border-style:solid;
+	border-radius:2rem;
+}
+.navbar img {
+	padding-top:0;
 }
